clean warnings