@@ -3,7 +3,8 @@ package jason.architecture;
 import org.w3c.dom.Document;
 
 import jason.asSemantics.Agent;
-import jason.infra.centralised.BaseCentralisedMAS;
+import jason.runtime.RuntimeServices;
+import jason.runtime.RuntimeServicesFactory;
 import jason.util.Config;
 
 public abstract class MindInspectorWeb {
@@ -17,9 +18,9 @@ public abstract class MindInspectorWeb {
     public static synchronized MindInspectorWeb get() {
         if (singleton == null) {
             try {
-                singleton = (MindInspectorWeb) Class.forName( Config.get().getMindInspectorWebServerClassName()).newInstance();
+                singleton = (MindInspectorWeb) Class.forName( Config.get().getMindInspectorWebServerClassName()).getConstructor().newInstance();
                 singleton.startHttpServer();
-                singleton.registerCentRunner(BaseCentralisedMAS.getRunner());
+                singleton.registerCentRunner(RuntimeServicesFactory.get());
             } catch (Exception e) {
                 e.printStackTrace();
             }
@@ -53,6 +54,6 @@ public abstract class MindInspectorWeb {
 
     public abstract void removeAg(Agent ag);
     public abstract void addAgState(Agent ag, Document mind, boolean hasHistory);
-    public void registerCentRunner(BaseCentralisedMAS rs) {}
+    public void registerCentRunner(RuntimeServices rs) {}
 
 }
