@@ -29,7 +29,7 @@ public class CentralisedEnvironment implements EnvironmentInfraTier {
         this.masRunner = masRunner;
         if (userEnvArgs != null) {
             try {
-                userEnv = (Environment) getClass().getClassLoader().loadClass(userEnvArgs.getClassName()).newInstance();
+                userEnv = (Environment) getClass().getClassLoader().loadClass(userEnvArgs.getClassName()).getConstructor().newInstance();
                 userEnv.setEnvironmentInfraTier(this);
                 userEnv.init(userEnvArgs.getParametersArray());
             } catch (Exception e) {
