@@ -261,7 +261,7 @@ public class MAS2JProject {
         if (infraFac == null) {
             try {
                 String facClass = Config.get().getInfrastructureFactoryClass(infrastructure.getClassName());
-                infraFac = (InfrastructureFactory)Class.forName(facClass).newInstance();
+                infraFac = (InfrastructureFactory)Class.forName(facClass).getConstructor().newInstance();
             } catch (Exception e) {
                 throw new JasonException("The project's infrastructure ('"+infrastructure.getClassName()+"') is not well configured! \n"+e);
             }
